--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ header{
     text-align:center;
     height:75px;
     background: #332c2c;
+    flex-shrink:0;
+    border-bottom: 7px solid #500000;
+    color:#ffffff;
+    line-height:75px;
 }
 .topBar{
     background-color:#d6d3c4;
@@ -83,16 +87,32 @@ hr{
 }
 .main{
     background-color: #ffffff;
-    max-width: 960px;
+    width: 960px;
     margin: 20px auto;
     font-family: 'Tungsten A', 'Tungsten B', sans-serif;
     border: 1px solid #332c2c;
     padding: 0 20px 20px 20px;
-    overflow:auto;
-    
+    overflow:visible;
+    line-height:1.7em;
+    color: #707373;
+    /*find out how to make the footer sticky without having giant blank space in the about me*/
+    flex:1;
+}
+/* .push{
+    margin:auto;
+    border:auto;
+    padding: 20px;
+    flex:1;
+    background: #ffffff;
+} */
+html, body{
+    height:100%;
 }
 body{
     background-image: url("../images/professional-portfolio-background-12.jpg");
+    display:flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 img{
     float:left;
@@ -100,22 +120,78 @@ img{
     width: 200px;
     padding: 20px;
 }
-.aboutsummary{
-    margin-left:20px;
-    color: #707373;
-    
-}
 h2{
     text-align:left;
     color: #500000;
     padding: 25px;
     margin: 0px auto 0px auto;
     font-family: 'Crimson Text', 'Georgia', serif;
-    z-index:4;
 }
 footer{
     text-align:center;
     height:75px;
     background: #332c2c;
     color: #ffffff;
+    flex-shrink:0;
+    border-top: 7px solid #500000;
+    line-height:75px;
+}
+form{
+    font-family: 'Tungsten A', 'Tungsten B', sans-serif;
+}
+input[type=text], select, textarea {
+    width: 100%; 
+    padding: 20px; 
+    border: 1px solid #332c2c; 
+    box-sizing: border-box; 
+    margin-top: 6px; 
+    margin-bottom: 16px; 
+    resize: vertical;
+    font-family: 'Tungsten A', 'Tungsten B', sans-serif;
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+    background-color: #500000;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-family: 'Tungsten A', 'Tungsten B', sans-serif;
+}
+#subject{
+    height:200px;
+}
+
+
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+/* .projects{
+    box-sizing:inherit;
+} */
+.projects::after{
+    display:table;
+}
+.column{
+    float:left;
+    width:50%;
+}
+.placeholder{
+    margin-left:120px;
+    width:300px;
+    height:300px;
+}
+.placeholder p{
+    position:absolute;
+    transform: translate(34%,100%);
+    color: #500000;
+    font-size: 20px;
+    background-color: #ffffff;
+    padding: 20px;
+    font-family: 'Tungsten A', 'Tungsten B', sans-serif;
+
 }
