--- a/Projects/star-wars-rgp/assets/css/style.css
+++ b/Projects/star-wars-rgp/assets/css/style.css
@@ -5,3 +5,16 @@
 .visible{
     display:visible;
 }
+
+.break{
+    white-space: pre-wrap;
+}
+
+body{
+    background-image: url("../media/images/spacebackground2.jpg");
+}
+/* @media (min-width: 1200px) {
+    .container{
+        max-width: 970px;
+    }
+} */
