--- a/Projects/GIFTASTIC/assets/css/style.css
+++ b/Projects/GIFTASTIC/assets/css/style.css
@@ -8,6 +8,13 @@ body {
 	-moz-animation: Gradient 0.5s ease infinite;
 	animation: Gradient 0.5s ease infinite;
 }
+.gif-btn {
+    background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+	background-size: 400% 400%;
+	-webkit-animation: Gradient 2s ease infinite;
+	-moz-animation: Gradient 2s ease infinite;
+	animation: Gradient 2s ease infinite;
+}
 
 @-webkit-keyframes Gradient {
 	0% {
