--- a/Projects/GIFTASTIC/assets/css/style.css
+++ b/Projects/GIFTASTIC/assets/css/style.css
@@ -15,6 +15,13 @@ body {
 	-moz-animation: Gradient 2s ease infinite;
 	animation: Gradient 2s ease infinite;
 }
+.gif{
+    border:2px solid black;
+    border-radius:5px;
+}
+figure {
+	display:inline-block;
+}
 
 @-webkit-keyframes Gradient {
 	0% {
@@ -26,7 +33,7 @@ body {
 	100% {
 		background-position: 0% 50%
 	}
-}
+} 
 
 @-moz-keyframes Gradient {
 	0% {
