--- a/Projects/GIFTASTIC/assets/css/style.css
+++ b/Projects/GIFTASTIC/assets/css/style.css
@@ -14,6 +14,10 @@ body {
 	-webkit-animation: Gradient 2s ease infinite;
 	-moz-animation: Gradient 2s ease infinite;
 	animation: Gradient 2s ease infinite;
+	border:1px solid black;
+}
+.clip-btn{
+	border:1px solid black;
 }
 .gif{
     border:2px solid black;
