--- a/Projects/GIFTASTIC/assets/css/style.css
+++ b/Projects/GIFTASTIC/assets/css/style.css
@@ -1,3 +1,21 @@
+@charset "UTF-8";
+
+* {
+	margin: 0;
+	padding: 0;
+}
+.navbar-brand{
+	font-size: 30px;
+}
+.clearfix:after{
+	content: "";
+	display: table;
+	clear: both;
+}
+.clearfix{
+	flex:1 1 auto;
+	overflow: hidden;
+}
 body {
 	width: 100wh;
 	height: 90vh;
